# limit-order-book-simulator

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: benchmark_matching.cpp
data/: sample_orders.csv
include/: matching_engine.hpp  order.hpp  order_book.hpp  types.hpp
python/: analyze_results.py  replay_orders.py
src/: main.cpp  matching_engine.cpp  order_book.cpp
tests/: test_matching_engine.cpp  test_order_book.cpp
